--- a/Twitter/app/src/main/res/values/strings.xml
+++ b/Twitter/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Twitter</string>
     <string name="action_settings">Settings</string>
+    <string name="str_sign_in_with_twitter">Signin with Twitter</string>
+    <string name="str_post_tweet">Show Tweet</string>
+    <string name="str_user_time_line">User Timeline</string>
 </resources>
